final draft, missing z-index correction

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   flex-direction: column;
   width: 100vw;
   height: 100vh;
-  background-color: #EBE7DB;
+  background-color: #cebf9072;
 }
 
 .BoardAreaDiv {
@@ -35,7 +35,8 @@
   position: relative;
   justify-content: center;
   align-items: center;
-  background-color: #EFE3C0;
+  /* background-color: #EFE3C0; */
+  background-color: #f6c634bd;
   border: 4px solid #000000;
   border-radius: 20px;
 }
@@ -63,7 +64,6 @@
 
   display: flex;
   align-items: center;
-
 }
 
 .Input {
@@ -71,46 +71,52 @@
   position: fixed;
   left: 2.5px;
   top: 2.5px;
-  
-  /* overflow: hidden; */
+  overflow: hidden;
   background-color: transparent;
-  /* border: none;
-  outline: none; */
+  border: none;
+  outline: none;
   font-size: 16px;
   width: 80%;
   height: 90%;
   
 }
 
+.Input:disabled {
+  color: #000000;
+}
+
 .DeleteButton {
   position: absolute;
   right: 2.5%;
   top: 2.5%;
-  height: 20px;
-  width: 20px;
+  height: 15px;
+  width: 15px;
   border-radius: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #EF476F;
 }
 
 .CompleteButton {
   position: absolute;
   right: 2.5%;
   bottom: 2.5%;
-  height: 20px;
-  width: 20px;
+  height: 15px;
+  width: 15px;
   border-radius: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  /* background-color: rgb(38, 255, 0); */
+  background-color: rgb(53, 227, 22);
 }
 
 .NavBarDiv {
   top: 0;
   height: 12%;
   display: flex;
-  background-color: #EBE7DB;
+  background-color: #f6c634bd;
   text-align: center;
   justify-content: space-around;
   align-items: center;
@@ -170,4 +176,18 @@
   bottom: 0%;
   left: -4em;
   
+}
+
+.Vertical {
+  position: absolute;
+  left: 50%;
+  height: 100%;
+  border-left: 3px dashed black;
+}
+
+.Horizontal {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  border-bottom: 3px dashed black;
 }
